// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component > ボタンをカスタムプロパティでレンダリング 1`] = `
<div>
  <a
    class="btn test-classType "
    href="test-link"
  >
    test-text
  </a>
</div>
`;

exports[`Button Component > ボタンをデフォルトプロパティでレンダリング 1`] = `
<div>
  <a
    class="btn  "
    href="/"
  >
    Button
  </a>
</div>
`;
